--- a/app/styles/card/card.module.css
+++ b/app/styles/card/card.module.css
@@ -70,7 +70,7 @@
 }
 
 .color4 {
-  background-color: #1b9392;
+  background-color: #ff7211;
 }
 .color1 .color3 :hover {
   background-color: #1b9392;
