--- a/app/styles/borrow/borrow.module.css
+++ b/app/styles/borrow/borrow.module.css
@@ -128,8 +128,7 @@
   border-radius: 10px;
   /* margin-top: 200px; */
   width: 100%;
-  max-width: 1200px;
-  margin: auto;
+  /* max-width: 1200px; */
 }
 
 /* Top Section */
