--- a/app/styles/card/projectcard.module.css
+++ b/app/styles/card/projectcard.module.css
@@ -4,7 +4,7 @@
     gap: 20px;
     justify-content: center;
     align-items: center;
-
+    width: 100%;
     /*background-color: #1E88E5;*/
     border-radius: 10px;
     padding: 15px;
@@ -51,10 +51,10 @@
     background-color: #1b9392;
 }
 
-.color3 {
+.color4 {
     background-color: #ff7211;
 }
 
-.color4 {
+.color3 {
     background-color: #1b9392;
 }
