--- a/app/styles/dashboards/dashboard.module.css
+++ b/app/styles/dashboards/dashboard.module.css
@@ -89,12 +89,20 @@
   background-color: #c6e7e7;
   padding: 20px;
   border-radius: 20px;
-  height: 300px;
-  width: 500px;
-  margin-top: 20px;
+  height: 360px;
+  width: 650px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
-
+/* @media (min-width: 1050px) {
+  .containercards{
+    width: 950px;
+  }
+}
+@media (max-width: 768px) {
+  .containercards{
+    width: 650px;
+  }
+} */
 
 .contents {
   display: grid;
