--- a/app/styles/dashboards/project/dashboard.module.css
+++ b/app/styles/dashboards/project/dashboard.module.css
@@ -20,14 +20,14 @@
 
   flex: 4;
   padding: 20px;
-  margin-left: -30px;
+  /* margin-left: -30px; */
   margin-top: 1px;
 
 }
-
-  /* flex: 4; */
-  /* padding: 15px; */
- 
+.allContents{
+  flex:4;
+  margin-top: 24px;
+}
  
 
 
@@ -57,13 +57,6 @@
 .dashboardContainer {
   display: flex;
   flex-direction: column;
-   margin-left: -30px;
-
-/*    margin-left: 1px; */
-
-  padding-left: 12px;
-  padding-right: 12px;
-
 
  }
 
