--- a/app/styles/staff/todo.module.css
+++ b/app/styles/staff/todo.module.css
@@ -62,12 +62,27 @@
   .editButton {
     background-color: #ffa500;
     color: white;
-    padding: 5px 10px;
+    padding: 5px 15px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 10px;
+    font-size: 14px;
+    margin-top: -10px;
   }
+
+  .taskItem {
+    margin-bottom: 8px;
+  }
+  
+  .deleteButton {
+    background: transparent;
+    border: none;
+    color: red;
+    font-size: 1.2rem;
+    cursor: pointer;
+    padding: 0 8px;
+  }
+  
   
   /* Modal Styles */
   .modal {
