--- a/app/styles/dashboards/dashboard.module.css
+++ b/app/styles/dashboards/dashboard.module.css
@@ -42,14 +42,9 @@
   display: flex;
   flex-direction: column;
   flex: 5;
-  gap: 20px;
+  gap: 10px;
   margin: auto;
   height: 100%;
-}
-@media (min-width: 768px) {
-  .studentMain {
-    grid-template-columns: repeat(3, minmax(0, 1fr)); /* Ensures equal width */
-  }
 }
 .cards {
   display: flex;
@@ -62,17 +57,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
-  margin-left: 20px;
-  margin-right: 10px;
+  gap: 10px;
+  margin: 10px;
 }
 .card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  gap: 10px;
   justify-content: center;
   align-items: center;
-  padding: 20px;
 }
 
 
@@ -93,16 +86,18 @@
   width: 650px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
-/* @media (min-width: 1050px) {
+@media (min-width: 1050px) {
   .containercards{
     width: 950px;
+    height: 350px;
   }
 }
 @media (max-width: 768px) {
   .containercards{
     width: 650px;
+    height: 250px;
   }
-} */
+} 
 
 .contents {
   display: grid;
@@ -151,42 +146,42 @@
 /*Responsive*/
 /* @media (min-width: 1600px) {
   .wrapper {
-    gap: 20px; /* Add more space between columns */
-    /* margin-right: 20px; 
+    gap: 20px;
+     margin-right: 20px; 
   } 
 
   .menu {
-    width: 300px; /* Increase sidebar width 
+    width: 300px; 
   }
 
   .contents {
-    grid-template-columns: repeat(3, 1fr); /* Change to 3 columns for larger screens 
-    gap: 40px; /* Decrease gap between items 
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 40px;
   }
 
   .containercard {
-    height: 250px; /* Increase card height 
+    height: 250px; 
   }
 
-  .containercards 
-    height: 350px; /* Increase project card height 
-    width: 600px; /* Increase width for larger screens 
+  .containercards {
+    height: 350px;  
+    width: 600px;  
   }
 
   .calendars {
-    grid-template-columns: repeat(3, 1fr); /* Display 3 columns for the calendar section 
+    grid-template-columns: repeat(3, 1fr);  
     gap: 30px;
   }
 
   .calendarContainer {
-    max-width: 400px; /* Increase calendar container size 
+    max-width: 400px; 
   }
-} 
-  */
+}  */
+
 
   .wrapper {
     display: flex;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
   }
   
@@ -206,5 +201,6 @@
     height: 50%;
     border-radius: 10px;
     padding: 10px;
+    margin-right: 20px;
   }
   
