--- a/app/styles/search/search.module.css
+++ b/app/styles/search/search.module.css
@@ -6,14 +6,15 @@
   border-radius: 25px;
   justify-content: space-between;
   height: 40px;
-  margin-top: 20px;
-  border: 1px solid #1B9392;
+  /* margin-top: 20px; */
+   background-color: #C6E7E7;
+   padding-bottom: 12px;
 }
 
 .input {
   background-color:transparent ;
   border: none;
-  color: #1B9392;
+  color: #000000;
   outline: none;
   font-size: 12px;
 }
