--- a/app/styles/dashboards/dashboard.module.css
+++ b/app/styles/dashboards/dashboard.module.css
@@ -55,9 +55,9 @@
 
 .view {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
-  gap: 10px;
+  gap: 20px;
   margin: 10px;
 }
 .card {
@@ -80,19 +80,19 @@
 
 .containercards {
   background-color: #c6e7e7;
-  padding: 20px;
+  padding: 10px;
   border-radius: 20px;
   height: 360px;
-  width: 650px;
+  width: 600px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
-@media (min-width: 1050px) {
+@media (min-width: 1580px) {
   .containercards{
-    width: 950px;
+    width: 51%;
     height: 350px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 1049px) {
   .containercards{
     width: 650px;
     height: 250px;
@@ -197,10 +197,17 @@
   .side {
     position: sticky;
     flex: 1;
-    display: block;
     height: 50%;
     border-radius: 10px;
     padding: 10px;
     margin-right: 20px;
   }
+  
+  @media (min-width: 1650px) {
+    .side {
+      display: block;
+    }
+  }
+  
+  
   
