--- a/app/styles/borrow/add/borrowForm.module.css
+++ b/app/styles/borrow/add/borrowForm.module.css
@@ -6,8 +6,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Dark overlay effect */
-    z-index: 999; /* Ensures it stays behind the popup */
+    background-color: rgba(0, 0, 0, 0.7); 
+    z-index: 999;
 }
 
 /* Popup container - perfectly centered */
@@ -31,8 +31,8 @@
     padding: 20px;
     border-radius: 10px;
     width: 100%;
-    max-height: 90vh; /* Prevents overflowing on small screens */
-    overflow-y: auto; /* Adds scroll if content is too large */
+    max-height: 90vh;
+    overflow-y: auto; 
 }
 
 /* Input, select, and textarea styling */
@@ -64,7 +64,7 @@
 .submit {
     width: 100px;
     padding: 10px;
-    background-color: #ff7211;
+    background-color: #1b9392;
     color: #ffffff;
     border-radius: 5px;
     border: none;
@@ -103,10 +103,59 @@
 
     .form input,
     .form select {
-        width: 100%; /* Full width for smaller screens */
+        width: 100%; 
     }
     
     .btn {
         font-size: 16px;
     }
 }
+.divInput {
+    display: flex;
+    flex-direction: column;
+    flex-basis: calc(50% - 10px);
+    margin-bottom: 20px;
+  }
+  
+  .form h3 {
+    margin-bottom: 20px;
+  }
+  
+  .form label {
+    font-size: 14px;
+  }
+  
+  .divInput input,
+  .divInput textarea,
+  .divInput select {
+    background-color: white;
+    padding: 10px; 
+     border-radius: 5px;
+    text-transform: capitalize;
+    color: grey;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  
+  }
+  
+  
+  
+  .divInput input,
+  .divInput select {
+    width: 100%;
+  }
+  
+  .divInput input{
+    color: black;
+  }
+  
+  
+  .divInput textarea {
+    width: 100%;
+  }
+  .label {
+    display: block;
+    color: #1b9392;
+    font-size: 24px;
+    margin-bottom: 4px;
+  }
+  
