--- a/app/styles/supplier/addSupplier.module.css
+++ b/app/styles/supplier/addSupplier.module.css
@@ -192,8 +192,8 @@
     border-radius: 8px;
     cursor: pointer;
     font-weight: bold;
-    /* float: right; */
-    margin-left: 664px;
+    margin-left: 800px;
+   justify-content: flex-end;
     margin-top: 1rem;
     transition: background-color 0.3s ease;
   }
