--- a/app/styles/navbar/navbar.module.css
+++ b/app/styles/navbar/navbar.module.css
@@ -1,9 +1,7 @@
 .container {
-  /*padding: 10px 20px;*/
   border-radius: 10px;
+  flex-direction: column;
   display: flex;
-  align-items: center;
-  justify-content: start;
   background-color: white; /* Ensure navbar has a background */
   margin-bottom: 10px;
 }
@@ -11,18 +9,30 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 20px;
-  background: linear-gradient(to left, #c2f3f3, #4fa9a9); /* Light to dark gradient */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 12px 20px;
+  background: linear-gradient(to right, #93c5fd, #dbeafe, #e9d5ff);
+  color: #003333;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
 }
 
+.left {
+  display: flex;
+  align-items: center;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
 
 .welcome {
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: #fff;
-  display: flex;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
 }
+
 .title {
   color: var(--textSoft);
   font-weight: bold;
@@ -34,6 +44,41 @@
  .component{
      font-size: 25px;
      font-weight: 650;
+}
+.userMenu {
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.dropdownMenu {
+  position: absolute;
+  top: 110%;
+  right: 0;
+  background-color: #ffffff;
+  width: 180px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  z-index: 999;
+}
+
+.dropdownMenu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.dropdownMenu li {
+  padding: 12px 16px;
+  font-size: 14px;
+  color: #333;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.dropdownMenu li:hover {
+  background-color: #c6e7e7;
 }
 
 .menu {
