--- a/app/styles/sidebar/sidebar.module.css
+++ b/app/styles/sidebar/sidebar.module.css
@@ -2,7 +2,7 @@
 .container {
   position: sticky;
   top: 0;
-  background-color: #1b9392;
+  background-color: #1c1c3c ;
   width: 270px;
   /*height: 850px;*/
   height: 100%;
@@ -11,9 +11,7 @@
   overflow-y: auto;
   transition: width 0.3s ease-in-out;
 }
-.down{
-  margin-top: 4px;
-}
+
 .whiteTexts{
   color: white;
 }
@@ -81,7 +79,7 @@
 
 
 .menuItem.active {
-  background-color: rgb(255, 114, 17);
+  background-color:#2bb3d2;
   border-radius: 5px;
   padding-left: 15px;
   margin-left: -5px;
@@ -118,12 +116,12 @@
 
 
 .submenu li:hover {
-  background-color:#4ed8d8;
+  background-color:#2bb3d2;
   border-radius: 5px;
   padding: 7px;
 }
 .active {
-  background-color: rgb(255, 114, 17);
+  background-color: #2bb3d2;
   border-radius: 5px;
   padding: 7px;
 }
@@ -160,7 +158,7 @@
 }
 
 .logout:hover {
-  background-color: #ff7211;
+  background-color: #2bb3d2;
 }
 
 /* Settings */
@@ -173,7 +171,7 @@
 }
 
 .settings:hover {
-  background-color: rgb(255, 114, 17);
+  background-color: #2bb3d2;
   border-radius: 4px;
   margin-top: 4px;
 }
@@ -186,10 +184,7 @@
   margin-left: -50px;
 }
 
-/* Push Logout and Settings Down for Large Screens */
-.down {
-  margin-top: 10px;
-}
+
 
 @media (min-width: 1800px) {
   .down {
