--- a/app/styles/sidebar/sidebar.module.css
+++ b/app/styles/sidebar/sidebar.module.css
@@ -5,7 +5,7 @@
   background-color: #1c1c3c ;
   width: 270px;
   /*height: 850px;*/
-  height: 100%;
+  height: 100vh;
   padding: 20px;
   /*margin: 4px;*/
   overflow-y: auto;
