--- a/app/components/toolBar/toolBar.module.css
+++ b/app/components/toolBar/toolBar.module.css
@@ -37,7 +37,7 @@
   transition: background-color 0.2s, transform 0.1s;
 }
 .primaryButton:hover {
-  background-color: #e5673c;
+    background-color: #27A0B0;  
   transform: translateY(-1px);
 }
 
