--- a/app/styles/cohorts/viewCohort/viewCohort.module.css
+++ b/app/styles/cohorts/viewCohort/viewCohort.module.css
@@ -7,9 +7,10 @@
   justify-content: space-between;
   margin-bottom: 20px;
   padding: 20px;
-  background: #1b9392;
+  background: #2bb3d2;
   border-radius: 10px;
   width: 100%;
+  color: #000;
 }
 
 .levelsContainer {
@@ -54,7 +55,7 @@
 }
 
 .button {
-  background-color: #1b9392;
+  background-color: #ff7f50;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -64,7 +65,7 @@
   font-size: 16px;
 }
 .buttons {
-  background-color: #ff7211;
+  background-color: #2f90bd;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -75,22 +76,12 @@
 }
 
 .buttons:hover {
-  background-color: #c6e7e7;
+  background-color: #08c6f5;
 }
 
-
-.button:hover {
-  background-color: #ff7211;
-}
 
 .container h1 {
   margin-bottom: 0;
-}
-
-
-.button:hover {
-  background-color: #ff7211;
-   box-shadow: 0 4px 8px rgb(255, 114, 17);
 }
 
 .container h1 {
@@ -132,13 +123,12 @@
 }
 
 .cohortdownload {
-  background-color: #c6e7e7;
+   background-color: #2f90bd;
   color: white;
 }
 
 .cohortdownload:hover {
-  background-color: #ff7211;
-  box-shadow: 0 4px 8px rgb(255, 114, 17);
+ background-color: #08c6f5;
 }
 
 .cohortdownload:active {
