--- a/app/styles/students/singleStudent/Facilitator.module.css
+++ b/app/styles/students/singleStudent/Facilitator.module.css
@@ -8,7 +8,7 @@
 
 .header {
     width: 100%;
-    background: #008080;
+    background-color: #1c1c3c;
     color: white;
     padding: 20px;
     text-align: start ;
@@ -23,10 +23,10 @@
 }
 
 .card {
-    background: #ff7211;
+ background: #c6e7e7;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
     width: 40%;
     text-align: center;
 }
@@ -111,7 +111,7 @@
     cursor: pointer;
 }
 .updateButton {
-    background: #ff8c00;
+    background: #4503fa;
     color: white;
     padding: 8px 12px;
     border: none;
