--- a/app/globals.css
+++ b/app/globals.css
@@ -91,5 +91,12 @@ a {
   gap: 20px;
   justify-content: flex-start;
 }
+.grid{
+display:flex;
+flex-wrap: wrap;
+flex-direction: column;
+  gap: 20px;
+  justify-content: space-between;
+}
 
 
